cabal-version:      3.0
name:               advent-of-code
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Jarred Allen
maintainer:         jarredallen73@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    -- exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:   
        base ^>=4.16.3.0,
        parsec ^>= 3.1.15.0
    hs-source-dirs:   .
    default-language: Haskell2010
